--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "vue": "^3.2.25",
-    "@vueuse/integrations": "^8.7.4",
     "@kyvg/vue3-notification": "^2.3.4",
+    "@types/node": "^18.0.3",
+    "@vueuse/integrations": "^8.7.4",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "pinia": "^2.0.14",
-    "vue-router": "^4.0.16"
+    "vee-validate": "^4.5.11",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.16",
+    "yup": "^0.32.11",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.53.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
