--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,13 @@
     "@vueuse/integrations": "^8.7.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.14",
+    "pug": "^3.0.2",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
-    "yup": "^0.32.11",
-    "pug": "^3.0.2"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
