--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-common-types": "^6.1.1",
     "@kyvg/vue3-notification": "^2.3.4",
     "@types/node": "^18.0.3",
     "@vueuse/integrations": "^8.7.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.14",
     "pug": "^3.0.2",
